more work on python scripting

--- a/FrequencyDependence/freq_dependent_tumor.ipynb
+++ b/FrequencyDependence/freq_dependent_tumor.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/imagesGlobalFreq/\n",
+      "./data/imagesGlobalFreq/\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -32,7 +41,9 @@
     "# palette_sensitiveResistant = {\"S\":\"#0F4C13\", \"R\":\"#710303\"} # Red/green scheme\n",
     "palette_sensitiveResistant = {\"S\":\"#5E7FDD\", \"R\":\"#D0D645\", \"TumourSize\":\"black\"}\n",
     "modelConfigDic = {'xDim':100,\"yDim\":100,'nTSteps':500,\"saveModelState\":True,\"dieProb\":0.01,\n",
-    "                  \"localFreq\":0,\"imageFrequency\":10}\n",
+    "                  \"localFreq\":0,\"imageFrequency\":10,\n",
+    "                  \"nReplicates\":2}\n",
+    "\n",
     "dataDir = \"./data/cellCountGlobalFreq\"\n",
     "imgDir = \"./data/imagesGlobalFreq\"\n",
     "seedToShowImagesFor = 1\n",
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +70,7 @@
        "Text(0.5, 1.0, 'Global frequency dependence')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,24 +118,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# simulate local frequency dependence\n",
+    "modelConfigDic = {'xDim':100,\"yDim\":100,'nTSteps':500,\"saveModelState\":True,\"dieProb\":0.01,\n",
+    "                  \"localFreq\":1,\"imageFrequency\":10}\n",
+    "\n",
     "dataDir = \"./data/cellCountLocalFreq\"\n",
     "imgDir = \"./data/imagesLocalFreq\"\n",
     "\n",
-    "modelConfigDic = {'xDim':100,\"yDim\":100,'nTSteps':500,\"saveModelState\":True,\"dieProb\":0.01,\n",
-    "                  \"localFreq\":1}\n",
-    "\n",
-    "myModel = Model(jarFileName = jarFileName, outDir=dataDir, **modelConfigDic)\n",
+    "myModel = Model(jarFileName = jarFileName, outDir=dataDir, imageOutDir=imgDir, **modelConfigDic)\n",
     "myModel.Simulate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +144,7 @@
        "Text(0.5, 1.0, 'Local frequency dependence')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
