--- a/FrequencyDependence/freq_dependent_tumor.ipynb
+++ b/FrequencyDependence/freq_dependent_tumor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,9 +40,9 @@
     "# nProcesses = 4 # Number of cores to use for multi-processing\n",
     "# palette_sensitiveResistant = {\"S\":\"#0F4C13\", \"R\":\"#710303\"} # Red/green scheme\n",
     "palette_sensitiveResistant = {\"S\":\"#5E7FDD\", \"R\":\"#D0D645\", \"TumourSize\":\"black\"}\n",
-    "modelConfigDic = {'xDim':100,\"yDim\":100,'nTSteps':500,\"saveModelState\":True,\"dieProb\":0.01,\n",
+    "modelConfigDic = {'xDim':100,\"yDim\":100,'nTSteps':5000,\"saveModelState\":True,\"dieProb\":0.01,\n",
     "                  \"localFreq\":0,\"imageFrequency\":10,\n",
-    "                  \"nReplicates\":2}\n",
+    "                  \"nReplicates\":2,'dieProb':0.0001}\n",
     "\n",
     "dataDir = \"./data/cellCountGlobalFreq\"\n",
     "imgDir = \"./data/imagesGlobalFreq\"\n",
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
