dose response model

--- a/FrequencyDependence/freq_dependent_tumor.ipynb
+++ b/FrequencyDependence/freq_dependent_tumor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "palette_sensitiveResistant = {\"S\":\"#5E7FDD\", \"R\":\"#D0D645\", \"TumourSize\":\"black\"}\n",
     "modelConfigDic = {'xDim':100,\"yDim\":100,'nTSteps':600,\"saveModelState\":True,\n",
     "                  \"localFreq\":0,\"imageFrequency\":-1,\n",
-    "                  \"nReplicates\":100,'dieProb':0.005,'pResistant':0.1,\"dt\":2}\n",
+    "                  \"nReplicates\":1,'dieProb':0.005,'pResistant':0.1,\"dt\":2}\n",
     "\n",
     "dataDir = \"./data/cellCountGlobalFreq\"\n",
     "imgDir = \"./data/imagesGlobalFreq\"\n",
@@ -52,7 +52,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/cellCountGlobalFreq/RepId_-1.csv\n"
+     ]
+    }
+   ],
    "source": [
     "myModel = Model(jarFileName = jarFileName, outDir=dataDir, imageOutDir=imgDir, **modelConfigDic)\n",
     "myModel.Simulate()"
@@ -379,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
